updated changelog for 0.9.2 release

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,22 +1,31 @@
+0.9.2
+-----
 New:
-* can be build using Apache Maven now as well
-* JCAMPReader now has a STRICT and RELAXED mode. For documentation, see STRICT constant in JCAMPReader. Further 
-usages of this flag should add documentation there.
+* added JCAMPReader.createSpectrum(Reader) method
+* code cleanup
+  * introduced serialVersionUIDs
+  * replaced StringBuffer with StringBuilder
+* can be built using Apache Maven now as well
+* JCAMPReader now has a STRICT and RELAXED mode. For documentation, 
+  see STRICT constant in JCAMPReader. Further usages of this flag 
+  should add documentation there.
 
 Fixes:
 * numeric values in header can be format "#.#" or "#,#" now
 * Labels in a comment (like $$ ##TITLE=) confused the parser
-* The parser reader now shows same behaviour with respect to units first and second time (this influenced if hertz-ppm-conversion was done in nmr, so rather big effects)
-* Reading of floats in XYDATA not works (thanks to Ralf Tralow for that)
+* The parser reader now shows same behaviour with respect to units 
+  first and second time (this influenced if hertz-ppm-conversion was 
+  done in nmr, so rather big effects)
+* Reading of floats in XYDATA now works (thanks to Ralf Tralow for that)
 
-0.9.1 Release
-------------
+0.9.1
+-----
 New:
 * Handling of multi block files (see doc)
 
 Fixes:
 * Some bugfixes
 
-0.9 Release
------------
+0.9.0
+-----
 No changes, since initial release  
